--- a/CSIT-553-FinalProject_WI (2).ipynb
+++ b/CSIT-553-FinalProject_WI (2).ipynb
@@ -11,9 +11,7 @@
     "\n",
     "# BY\n",
     "\n",
-    "# Priyanka Alugolu\n",
-    "# Siva Chandra Kakarlapudi\n",
-    "# Sumanth Varma Dandu\n"
+    "# Siva Chandra Kakarlapudi\n"
    ]
   },
   {
